[package]
name = "vulkano-rainbow-triangle"
version = "0.1.0"
authors = ["rexim <reximkut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.22.0"
vulkano-win = "0.22.0"
vulkano-shaders = "0.22.0"
winit = "0.24.0"
